--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,11 @@ body {
 .DataBox{
   display: inline-block;
   background-color: #f0f0f0;
-  width: 80%;
+  width: 60%;
   border: 1px solid #D0D0D0;
   padding: 15px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 4%;
+  margin-right: 4%;
   margin-top: 60px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 4px;
@@ -57,3 +57,39 @@ font-style: italic;
   display: inline-block;
 }
 
+
+.page {
+  padding: 20px;
+}
+
+
+.RightArrow {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 0px;
+  
+  margin-top: 90px;
+  padding-left: 0px;
+  margin-left : 10px;
+  margin-right :10px;
+  display: inline;
+  float: right;
+  background-color: lightslategray;
+}
+
+.LeftArrow {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 0px;
+  margin-top: 90px;
+  padding-left: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: inline;
+  float: left;
+  background-color: lightslategray;
+}
+
+.SearchBack {
+   display: inline;
+}
